keep the hot deployers working (not a final solution)

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -7130,6 +7130,7 @@
     #
     module.framework.initial.bundles=\
         file:${module.framework.lib.dir}/org.apache.felix.log.jar@start,\
+        file:${module.framework.portal.dir}/hotdeploy-listeners.jar@start,\
         felix-fileinstall.jar@start,\
         log-bridge.jar@start
 
