--- a/osgi/modules/hotdeploy-listeners/hotdeploy-listeners/build.gradle
+++ b/osgi/modules/hotdeploy-listeners/hotdeploy-listeners/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 	compile files(["${liferayProjectDir}/portal-impl/classes"])
 
 	compile (
+		[group: 'org.osgi', name: 'org.osgi.compendium', version: '4.3.1'],
 		[group: 'org.osgi', name: 'org.osgi.core', version: '4.3.1']
 	)
 }
