BND plugin to process @Portlet annotation to blueprint files

--- a/osgi/modules/settings.gradle
+++ b/osgi/modules/settings.gradle
@@ -1,5 +1,6 @@
 include 'hotdeploy-listeners'
 include 'registry'
 include 'polls-application'
+include 'bnd-plugins'
 
 rootProject.name = 'osgi-modules'
