New condition service.plugin.osgi to trigger creation of ActionableDynamicQuery in impl module

--- a/osgi/modules/gradle/servicebuilder/servicebuilder.gradle
+++ b/osgi/modules/gradle/servicebuilder/servicebuilder.gradle
@@ -53,6 +53,7 @@ task buildService(type: JavaExec) {
 	args "service.props.util=com.liferay.portal.util.PropsUtil"
 	args "service.target.entity.name=${project.ext.targetEntityName}"
 	args "service.test.dir=src/test/java"
+    args "service.plugin.osgi=true"
 	args "-Dservice.tpl.actionable_dynamic_query=/osgi_actionable_dynamic_query.ftl"
 	args "-Dservice.tpl.export_actionable_dynamic_query=/osgi_export_actionable_dynamic_query.ftl"
 	args "-Dservice.tpl.persistence_util=/osgi_persistence_util.ftl"
