--- a/modules/apps/forms-and-workflow/polls/osgi-functional/build.gradle
+++ b/modules/apps/forms-and-workflow/polls/osgi-functional/build.gradle
@@ -5,4 +5,5 @@ dependencies {
     compile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.12.0"
     compile group: "io.javaslang", name: "javaslang", version: "2.0.4"
     compile group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
+    compile group: "org.osgi", name: "org.osgi.service.cm", version: "1.5.0"
 }
