LPS-100145 Allow configuration to exclude role names to be dynamically contributed
Also restrict the role addition API to work with identifiers so we
always get the role from the service to properly check the name.

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -4202,6 +4202,14 @@
     #
     permissions.check.guest.enabled=true
 
+    #
+    # Comma separated list of roles that are not allowed to be dynamically
+    # contributed by RoleContributor instances
+    #
+    # Env: LIFERAY_PERMISSIONS_PERIOD_DYNAMIC_PERIOD_FORBIDDEN_PERIOD_ROLE_PERIOD_NAMES
+    #
+    permissions.dynamic.forbidden.role.names=Administrator
+
 ##
 ## Startup Events
 ##
